Fix bug: 100vw widths to 100% to avoid horizontal scrollbar
Previously a horizontal scrollbar appeared because "100vw" width does not account for when a vertical scrollbar appears, constraining the width and causing a horizontal one to appear as well

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow-y: auto;
 }
 
@@ -30,7 +30,7 @@ h3 {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   text-align: center;
   overflow-y: auto;
 }
